AkitaOnRails fixed! --> Removed Nav-Links that is broken on Brave

--- a/css/akita.css
+++ b/css/akita.css
@@ -144,3 +144,9 @@ body::-webkit-scrollbar-button
 {
     background-color: var(--lavender-blue) !important;
 }
+
+/*Hiding because it's broken on Brave Browser*/
+.menu > ul
+{
+    display: none;
+}
